# audio-toolkit-shell

./: .gitignore  Drag and drop Function.md  Drag-and-drop-Function.md  MD_TEMPLATE.MD  README.md  REFACTOR_VALIDATION.md  future_fix.md  project_structure_analysis.md  python_scripts_analysis.md
PRD/: CURRENT_STATUS_COMPLETE.md  DEBUG_HISTORY_COMPLETE.md  PRD_FINAL.md  PTY_RESEARCH_SOLUTIONS.md  README.md
audio-toolkit-shell/: CHANGELOG.md  CONFIGURATION.md  EMOJI_SUPPORT.md  MD_TEMPLATE.MD  PERFORMANCE_ANALYSIS.md  README.md  REFACTOR_SUMMARY.md  RESIZER_AND_LAYOUT_AUDIT.md  SETING_DEFAULT_SIZE.md  TECHNICAL.md  TERMINAL_RENDERING_DEBUG_LOG.md  VERIFICATION_RESULTS.md  package-lock.json  package.json  resize_debug.md  test_wrapper.sh
audio-toolkit-shell/AUDITIS_AND_INFO/: Drag-and-drop-Function.md  RESIZER_AND_LAYOUT_AUDIT.md
audio-toolkit-shell/dev-mocks/: mock_launcher.sh
audio-toolkit-shell/src-tauri/: Cargo.toml  config.toml  fix_terminal_ui.py  fix_ui_complete.py  fix_ui_rendering.py  tauri.conf.json  test_wrapper.sh
audio-toolkit-shell/src-tauri/src/: app.rs  config.rs  lib.rs  main.rs  terminal.rs  theme.rs
audio-toolkit-shell/src-tauri/src/handlers/: errors.rs  mod.rs
audio-toolkit-shell/src-tauri/src/models/: auth.rs  mod.rs  process.rs  terminal.rs
audio-toolkit-shell/src-tauri/src/services/: auth.rs  file_handler.rs  mod.rs  process_manager.rs
audio-toolkit-shell/src-tauri/src/tests/: auth_tests.rs  command_integration_tests.rs  file_handler_tests.rs  mod.rs  model_tests.rs  process_tests.rs
audio-toolkit-shell/src-tauri/src/utils/: mod.rs
(+109 files in other folders)
