[package]
name = "audio-toolkit-shell"
version = "0.1.0"
description = "A unified shell for audio workflow tools"
authors = ["Audio Toolkit Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"

eframe = "0.27.2"
egui = "0.27.2"
portable-pty = "0.9.0"
toml = "0.8"
tempfile = "3.8"
unicode-width = "0.1"
