[package]
name = "audio-toolkit-shell"
version = "0.1.0"
description = "A unified shell for audio workflow tools"
authors = ["Audio Toolkit Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
serde = { version = "1.0", features = ["derive"] }
eframe = "0.27.2"
egui = "0.27.2"
portable-pty = "0.9.0"
toml = "0.8"
